fixed alignment issues for videos and image callouts

--- a/fls_2019/assets/src/sass/partials/_fluid.scss
+++ b/fls_2019/assets/src/sass/partials/_fluid.scss
@@ -301,6 +301,16 @@ html {
 							}
 						}
 					}
+					.image_callout {
+						&__item {
+							&:nth-of-type(even){
+								padding-right:0;
+							}
+							&:nth-of-type(odd){
+								padding-left:0;
+							}
+						}
+					}
 					&#image_callout, &#all_solutions {
 						padding-top:2rem;
 						@media(min-width:768px){
@@ -429,6 +439,14 @@ html {
 											height: 100%;
 											border: 0;
 										}
+									}
+								}
+								&.multi {
+									&:nth-of-type(even){
+										padding-right:0;
+									}
+									&:nth-of-type(odd){
+										padding-left:0;
 									}
 								}
 							}
